--- a/Open-ILS/web/reports/oils_rpt.xhtml
+++ b/Open-ILS/web/reports/oils_rpt.xhtml
@@ -10,41 +10,10 @@
 
 	<head>
 		<title>Evergreen: Reports</title>
-		<script language='javascript' src='/opac/common/js/utils.js'> </script>
-		<script language='javascript' src='/opac/common/js//config.js'> </script> 
-		<script language='javascript' src='/opac/common/js/CGI.js'> </script>
-		<script language='javascript' src='/opac/common/js/Cookie.js'> </script>
-		<script language='javascript' src='/opac/common/js/JSON.js'> </script>
-		<script language='javascript' src='/opac/common/js/fmall.js'> </script>
-		<script language='javascript' src='/opac/common/js/fmgen.js'> </script>
-		<script language='javascript' src='/opac/common/js/Cookies.js'> </script>
-		<script language='javascript' src='/opac/common/js/opac_utils.js'> </script>
-		<script language='javascript' src='/opac/common/js/OrgTree.js'> </script>
-		<script language='javascript' src='/opac/common/js/org_utils.js'> </script>
-		<script language='javascript' src='/opac/common/js/init.js'> </script>
-		<script language='javascript' src='/opac/common/js/RemoteRequest.js'> </script>
-		<script language='javascript' src='slimtree.js'> </script>
-
-		<link rel="stylesheet" type="text/css" media="all" 
-			href="/opac/common/js/jscalendar/calendar-brown.css" title="win2k-cold-1" />
-		<script type="text/javascript" src="/opac/common/js/jscalendar/calendar.js"></script>
-		<script type="text/javascript" src="/opac/common/js/jscalendar/lang/calendar-en.js"></script>
-		<script type="text/javascript" src="/opac/common/js/jscalendar/calendar-setup.js"></script>
-
-		<script type="text/javascript" src="adminlib.js"></script>
-		<script type="text/javascript" src="oils_rpt_vars.js"></script>
-		<script type="text/javascript" src="oils_rpt_utils.js"></script>
-		<script type="text/javascript" src="oils_rpt_builder.js"></script>
-		<script type="text/javascript" src="oils_rpt_tree.js"></script>
-		<script type="text/javascript" src="oils_rpt.js"></script>
-
-		<link rel="stylesheet" type="text/css" href="oils_rpt.css"> </link>
-
-		<script>function _l(l) { location.href = l + location.search; }</script>
-
+		<!--#include virtual="oils_rpt_common.xhtml"-->
 	</head>
 
-	<body onload='oilsInitReports();' onunload='oilsCleanupReports();'>
+	<body onload='oilsInitReports();oilsRtpInitFolders();' onunload='oilsCleanupReports();'>
 		<div class='welcome_box'>
 			<span>You are logged in as </span><b><span id='oils_rpt_user'/></b>
 		</div>
@@ -52,6 +21,19 @@
 		<div>
 			<a class='oils_rpt_main_link' href='javascript:_l("oils_rpt_builder.xhtml");'>Build a New Report</a>
 		</div>
+
+
+		<table id='oils_rpt_main_table'>
+			<tbody>
+				<tr>
+					<td>
+						<div id='oils_rpt_folder_tree_div'>
+						</div>
+					</td>
+				</tr>
+			</tbody>
+		</table>
+
 	</body>
 </html>
 
