starting work on folder-specific window framework

--- a/Open-ILS/web/reports/oils_rpt.xhtml
+++ b/Open-ILS/web/reports/oils_rpt.xhtml
@@ -23,11 +23,15 @@
 		</div>
 
 
-		<table id='oils_rpt_main_table'>
+		<table id='oils_rpt_folder_table'>
 			<tbody>
 				<tr>
-					<td>
+					<td id='oils_rpt_folder_table_left_td'>
 						<div id='oils_rpt_folder_tree_div'>
+						</div>
+					</td>
+					<td id='oils_rpt_folder_table_right_td'>
+						<div id='oils_rpt_folder_window_div'>
 						</div>
 					</td>
 				</tr>
