--- a/Open-ILS/web/reports/oils_rpt_builder.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_builder.xhtml
@@ -63,7 +63,7 @@
 
 		<div id='oils_rpt_column_editor' class='floaty hide_me'>
 
-			<table id='oils_rpt_editor_tab_table'><tbody>
+			<table id='oils_rpt_editor_tab_table' class='oils_rpt_tab_table'><tbody>
 				<tr>
 					<td width='33%'><a id='oils_rpt_tform_tab' href='javascript:void(0);'>Display Items</a></td>
 					<td width='33%'><a id='oils_rpt_filter_tab' href='javascript:void(0);'>Filters</a></td>
