--- a/Open-ILS/web/reports/oils_rpt_common.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_common.xhtml
@@ -36,6 +36,7 @@
 <script type="text/javascript" src="oils_rpt_builder_widgets.js"></script>
 <script type="text/javascript" src="oils_rpt_folders.js"></script>
 <script type="text/javascript" src="oils_rpt_folder_window.js"></script>
+<script type="text/javascript" src="oils_rpt_widget.js"></script>
 <script type="text/javascript" src="oils_rpt.js"></script>
 
 <link rel="stylesheet" type="text/css" href="oils_rpt.css"> </link>
