--- a/Open-ILS/web/reports/oils_rpt_template_folder_window.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_template_folder_window.xhtml
@@ -20,7 +20,7 @@
 				</td>
 			</tr>
 			<tr>
-				<td colspan='2'>
+				<td colspan='3' align='center'>
 					<button id='oils_rpt_template_folder_window_go'>Go!</button>
 				</td>
 			</tr>
