--- a/Open-ILS/web/reports/oils_rpt_common.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_common.xhtml
@@ -12,6 +12,9 @@
 <script language='javascript' src='/opac/common/js/init.js'> </script>
 <script language='javascript' src='/opac/common/js/RemoteRequest.js'> </script>
 <script language='javascript' src='/opac/common/js/slimtree.js'> </script>
+<script language='javascript' src='/opac/common/js/sorttable.js'> </script>
+<script language='javascript' src='/opac/common/js/fm_table.js'> </script>
+<script language='javascript' src='/opac/common/js/fm_table_conf.js'> </script>
 <script>
 	stpicopen  = '../opac/images/slimtree/folder2.gif';
 	stpicclose = '../opac/images/slimtree/folderopen2.gif';
@@ -37,8 +40,10 @@
 <script type="text/javascript" src="oils_rpt_folders.js"></script>
 <script type="text/javascript" src="oils_rpt_folder_window.js"></script>
 <script type="text/javascript" src="oils_rpt_widget.js"></script>
+<script type="text/javascript" src="oils_rpt_param_editor.js"></script>
 <script type="text/javascript" src="oils_rpt.js"></script>
 
+<link type='text/css' rel='stylesheet' href="/opac/common/css/fm_table.css"/>
 <link rel="stylesheet" type="text/css" href="oils_rpt.css"> </link>
 
 <script>function _l(l) { location.href = l + location.search; }</script>
