--- a/Open-ILS/web/reports/oils_rpt_report_folder_window.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_report_folder_window.xhtml
@@ -2,10 +2,9 @@
 	<table>
 		<tbody>
 			<tr>
-				<td>Select a report:</td>
-				<td><select id='oils_rpt_report_selector'/></td>
-				<td>
-					<span>Report Description: </span><span id='oils_rpt_report_description'/>
+				<td colspan='3'>
+					<div><b>Folder Contents</b></div>
+					<div id='oils_rpt_report_selector'/>
 				</td>
 			</tr>
 			<tr>
