--- a/Open-ILS/web/reports/oils_rpt_template_folder_window.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_template_folder_window.xhtml
@@ -1,9 +1,11 @@
 <div id='oils_rpt_template_folder_window_contents_div' class='hide_me oils_rpt_folder_window_div'>
-	<table>
+	<table id='oils_rpt_template_folder_window_contents_table'>
 		<tbody>
 			<tr>
-				<td>Select a template:</td>
-				<td><select id='oils_rpt_template_selector'/></td>
+				<td colspan='3'>
+					<div><b>Folder Contents</b></div>
+					<div id='oils_rpt_template_selector'/>
+				</td>
 			</tr>
 			<tr>
 				<td>Select an action:</td>
@@ -19,12 +21,35 @@
 					</div>
 				</td>
 			</tr>
-			<tr>
-				<td colspan='3' align='center'>
-					<button id='oils_rpt_template_folder_window_go'>Go!</button>
+			<tr id='oils_rpt_template_folder_go_row'>
+				<td colspan='3' align='left'>
+					<button id='oils_rpt_template_folder_window_go'>Continue...</button>
 				</td>
 			</tr>
 		</tbody>
 	</table>
+
+	<div style='margin-top: 10px;'>
+		<div id='oils_rpt_template_folder_new_report' class='hide_me'>
+			<table>
+				<tbody>
+					<tr>
+						<td>Give the new report a name:</td>
+						<td><input id='oils_rpt_template_folder_new_report_name' type='text'/></td>
+					</tr>
+					<tr>
+						<td>Give the new report a description:</td>
+						<td><textarea id='oils_rpt_template_folder_new_report_desc' cols='40' rows='2'/></td>
+					</tr>
+					<tr>
+						<td colspan='2' align='left'>
+							<button id='oils_rpt_template_folder_new_report_next'>Continue..</button>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+	</div>
+
 </div>
 
