more work on folder window interface, started on a generic report editor interface

--- a/Open-ILS/web/reports/oils_rpt.xhtml
+++ b/Open-ILS/web/reports/oils_rpt.xhtml
@@ -66,21 +66,21 @@
 							</table>
 
 							<div>
-
 								<!--#include virtual="oils_rpt_folder_window.xhtml"-->
-
-								<!--
-								<|||#include virtual="oils_rpt_template_folder_window.xhtml"||>
-								<|||#include virtual="oils_rpt_report_folder_window.xhtml"||>
-								-->
 							</div>
 						</div>
 					</td>
+
+					<td id='oils_rpt_folder_table_alt_td' class='hide_me'>
+						<div class='oils_rpt_folder_window'>
+							<!--#include virtual="oils_rpt_editor.xhtml"-->
+						</div>
+					</td>
+
 				</tr>
 			</tbody>
 		</table>
 
-		<!--#include virtual="oils_rpt_param_editor.xhtml"-->
 
 	</body>
 </html>
