--- a/Open-ILS/web/reports/oils_rpt_common.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_common.xhtml
@@ -42,6 +42,7 @@
 <script type="text/javascript" src="oils_rpt_widget.js"></script>
 <script type="text/javascript" src="oils_rpt_param_editor.js"></script>
 <script type="text/javascript" src="oils_rpt.js"></script>
+<script type="text/javascript" src="oils_rpt_report_editor.js"></script>
 
 <link type='text/css' rel='stylesheet' href="/opac/common/css/fm_table.css"/>
 <link rel="stylesheet" type="text/css" href="oils_rpt.css"> </link>
