--- a/Open-ILS/web/reports/oils_rpt_folder_window.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_folder_window.xhtml
@@ -5,8 +5,8 @@
 				<td> 
 					<span>
 						<select id='oils_rpt_folder_contents_action_selector' style='width: auto;'>
-							<option type='template' value='clone_template'>Clone template</option>
 							<option type='template' value='create_report'>Create a new report from template</option>
+							<option type='template' value='clone_template'>Clone template</option>
 							<option type='report' value='change_params'>Clone report</option>
 							<option type='report' value='schedule_report'>Schedule report</option>
 						</select>
@@ -17,7 +17,7 @@
 			<tr class='oils_rpt_folder_window_contents_row'>
 				<td width='100%' align='center'>
 					<table width='100%'><tbody>
-						<tr><td align='center'><b>Folder Contents</b></td></tr>
+						<tr><td align='center'><h4>Folder Contents</h4></td></tr>
 						<tr><td><div id='oils_rpt_folder_contents_selector'/></td></tr>
 					</tbody></table>
 				</td>
