--- a/Open-ILS/web/reports/oils_rpt_editor.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_editor.xhtml
@@ -1,5 +1,5 @@
 <div id='oils_rpt_editor_div'>
-	<table>
+	<table width='100%'>
 		<tbody>
 			<tr>
 				<td>Template Name:</td>
@@ -21,6 +21,11 @@
 			<tr>
 				<td>Report Description:</td>
 				<td><input type='text' id='oils_rpt_report_editor_name'/></td>
+			</tr>
+			<tr><td colspan='2'><hr/></td></tr>
+			<tr>
+				<td>Choose a report folder as the destination: </td>
+				<td id='oils_rpt_report_editor_dest_folder'/>
 			</tr>
 			<tr><td colspan='2'><hr/></td></tr>
 			<tr>
