--- a/Open-ILS/web/reports/oils_rpt_param_editor.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_param_editor.xhtml
@@ -5,10 +5,11 @@
 
 	<table id='oils_rpt_param_editor_table'>
 		<thead>
-			<tr><td>Column</td><td>Action</td><td>User Params</td></tr>
+			<tr><td>Object</td><td>Column</td><td>Action</td><td>User Params</td></tr>
 		</thead>
 		<tbody id='oils_rpt_param_editor_tbody'>
 			<tr name='tr'>
+				<td name='object'/>
 				<td name='column'/>
 				<td name='action'/>
 				<td name='widget'/>
