--- a/Open-ILS/web/reports/oils_rpt_editor.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_editor.xhtml
@@ -20,12 +20,18 @@
 			</tr>
 			<tr>
 				<td>Report Description:</td>
-				<td><input type='text' id='oils_rpt_report_editor_name'/></td>
+				<td><textarea cols='45' rows='2' id='oils_rpt_report_editor_name'/></td>
 			</tr>
 			<tr><td colspan='2'><hr/></td></tr>
 			<tr>
 				<td>Choose a report folder as the destination: </td>
-				<td id='oils_rpt_report_editor_dest_folder'/>
+				<td>
+					<div style='margin-bottom: 7px;'>
+						<span>Selected Folder: </span>
+						<b id='oils_rpt_report_editor_selected_folder'/>
+					</div>
+					<span id='oils_rpt_report_editor_dest_folder'/>
+				</td>
 			</tr>
 			<tr><td colspan='2'><hr/></td></tr>
 			<tr>
