--- a/Open-ILS/web/reports/oils_rpt_folder_manager.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_folder_manager.xhtml
@@ -1,6 +1,7 @@
 <div id='oils_rpt_folder_manager_div' class='hide_me' style='margin-top: 10px; text-align: center;'>
 	<select id='oils_rpt_folder_manager_actions'>
 		<option value='change_name'>Change folder name</option>
+		<option value='delete' id='oils_rpt_folder_manager_delete_opt'>Delete this folder</option>
 		<option value='create_sub_folder'>Create a new sub-folder</option>
 		<option id='oils_rpt_folder_manager_share_opt' value='share'>Share this folder</option>
 		<option id='oils_rpt_folder_manager_unshare_opt' value='unshare'>Hide (un-share) this folder</option>
@@ -52,4 +53,13 @@
 		Are you sure you wish to create new subfolder
 	</span>
 
+	<span class='hide_me' id='oils_rpt_folder_manager_delete_confirm'>
+		Are you sure you wish to delete this folder?
+	</span>
+		
+	<span class='hide_me' id='oils_rpt_folder_cannot_delete'>
+		This folder may not be deleted because it is not empty.
+	</span>
+
 </div>
+
