added report and template delete actions, added report save actions

--- a/Open-ILS/web/reports/oils_rpt_editor.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_editor.xhtml
@@ -20,7 +20,7 @@
 			</tr>
 			<tr>
 				<td>Report Description:</td>
-				<td><textarea cols='45' rows='2' id='oils_rpt_report_editor_name'/></td>
+				<td><textarea cols='45' rows='2' id='oils_rpt_report_editor_desc'/></td>
 			</tr>
 			<tr><td colspan='2'><hr/></td></tr>
 			<tr>
@@ -45,6 +45,12 @@
 					Add scheduling interface ...
 				</td>
 			</tr>
+			<tr>
+				<td colspan='2'>
+					<input id='oils_rpt_report_editor_save' type='submit' value='Save Report'/>
+				</td>
+			</tr>
+
 		</tbody>
 	</table>
 </div>
