tranform and ui updates

--- a/Open-ILS/web/reports/oils_rpt_builder.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_builder.xhtml
@@ -54,6 +54,11 @@
 							<select id='oils_rpt_filter_selector' class='oils_rpt_info_item oils_rpt_info_selector' multiple='multiple'/>
 							<button onclick='oilsDelSelectedFilterItems();'><u>X</u> Remove Selected</button>
 						</div>
+						<div class='oils_rpt_info_div'>
+							<div class='oils_rpt_info_item oils_rpt_info_title'>Report Aggregate Filters</div>
+							<select id='oils_rpt_agg_filter_selector' class='oils_rpt_info_item oils_rpt_info_selector' multiple='multiple'/>
+							<button onclick='oilsDelSelectedAggFilterItems();'><u>X</u> Remove Selected</button>
+						</div>
 					</td>	
 				</tr>
 			</tbody>
