show Age Protection in classic style hold pull list

--- a/Open-ILS/xul/staff_client/server/admin/hold_pull_list_classic.xhtml
+++ b/Open-ILS/xul/staff_client/server/admin/hold_pull_list_classic.xhtml
@@ -29,6 +29,8 @@
 		<script language='javascript' src='/opac/common/js/sorttable.js'> </script>
 		-->
 		<script language='javascript' src='adminlib.js'> </script>
+		<script language='javascript' src='/xul/server/main/constants.js'> </script>
+		<script language='javascript' src='/xul/server/main/JSAN.js'> </script>
 		<script language='javascript' src='hold_pull_list_classic.js'> </script>
 		<link type='text/css' rel='stylesheet' href='admin.css'/>
   
@@ -56,6 +58,7 @@
 <b>Copy:</b> <span name='copy_number'/>   <b>Location:</b> <span name='copy_location'/>   <b>Item ID:</b> <span name='barcode'/>
 <b>Item Type:</b> <span name='item_type'><span name='format_at' class='hide_me'>Book               </span><span name='format_at-d' class='hide_me'>Large Print Book   </span><span name='format_i' class='hide_me'>Audiobook          </span><span name='format_g' class='hide_me'>Video Recording    </span><span name='format_j' class='hide_me'>Music              </span><span name='format_m' class='hide_me'>Electronic Resource</span></span>   <b>Patron ID:</b> <span name='patron'/>
 <b>Requested:</b> <span name='date'/>            <b>Hold Type:</b> <span name='copy_hold' class='hide_me'>Copy Hold</span><span name='volume_hold' class='hide_me'>Volume Hold</span><span name='title_hold' class='hide_me'>Title Hold</span><span name='mr_hold' class='hide_me'>Metarecord Hold</span>
+<span name="age_protect_span" class='hide_me'><b>Hold Protection:</b> <span name="age_protect"/></span>
 </pre>
 </div>
 	</body>
