--- a/Open-ILS/web/reports/oils_rpt_ops.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_ops.xhtml
@@ -4,7 +4,7 @@
 
 			<td>
 				<select name='selector' style='width: 14em;'>
-					<option value='' selected='selected'>Equals</option>
+					<option value='=' selected='selected'>Equals</option>
 					<option value='like'>Contains Matching substring</option>
 					<option value='ilike'>Contains Matching substring (ignore case)</option>
 					<option value='&gt;'>Greater than</option>
@@ -19,7 +19,7 @@
 
 			</td>
 
-			<td name='widget_td'>
+			<td class='hide_me' name='widget_td'> <!-- DEPRECATED -->
 				<!-- Define all of the helpful user data widgets here -->
 
 				<input widget='1' id='oils_rpt_filter_tform_input' size='12' type='text'/>
