missed the Distinct

--- a/Open-ILS/web/reports/oils_rpt_tforms.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_tforms.xhtml
@@ -38,7 +38,7 @@
 					
 					<!-- int transforms -->
 					<option value='count' datatype='int' aggregate='1'>Count</option>
-					<option value='count_distinct' datatype='int' aggregate='1'>Count</option>
+					<option value='count_distinct' datatype='int' aggregate='1'>Count Distinct</option>
 					<option value='min' datatype='int' aggregate='1'>Min</option>
 					<option value='max' datatype='int' aggregate='1'>Max</option>
 					<option value='sum' datatype='int' aggregate='1'>Sum</option>
@@ -46,7 +46,7 @@
 
 					<!-- float transforms -->
 					<option value='count' datatype='float' aggregate='1'>Count</option>
-					<option value='count_distinct' datatype='float' aggregate='1'>Count</option>
+					<option value='count_distinct' datatype='float' aggregate='1'>Count Distinct</option>
 					<option value='min' datatype='float' aggregate='1'>Min</option>
 					<option value='max' datatype='float' aggregate='1'>Max</option>
 					<option value='sum' datatype='float' aggregate='1'>Sum</option>
