added lt/gt dups for date/time stuff

--- a/Open-ILS/web/reports/oils_rpt_ops.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_ops.xhtml
@@ -11,6 +11,10 @@
 					<option value='&gt;='>Greater than or equal to</option>
 					<option value='&lt;'>Less than</option>
 					<option value='&lt;='>Less than or equal to</option>
+					<option value='&gt;'>After (Date/Time)</option>
+					<option value='&gt;='>On or After (Date/Time)</option>
+					<option value='&lt;'>Before (Date/Time)</option>
+					<option value='&lt;='>On or Before (Date/Time)</option>
 					<option value='in'>In (comma separated list)</option>
 					<option value='not in'>Not in (comma separated list)</option>
 					<option value='between'>Between</option>
