--- a/Open-ILS/web/reports/oils_rpt_folder_window.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_folder_window.xhtml
@@ -5,6 +5,7 @@
 				<td> 
 					<span>
 						<select id='oils_rpt_folder_contents_action_selector' style='width: auto;'>
+							<option value='create_template' type='template'>Create a new template in this folder</option>
 							<option type='template' value='create_report'>Create a new report from selected template</option>
 							<option type='template' value='clone_template'>Clone selected template</option>
 							<option type='template' value='delete_template'>Delete selected template(s)</option>
