--- a/Open-ILS/web/reports/oils_rpt_param_editor.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_param_editor.xhtml
@@ -3,6 +3,52 @@
 		<b id='oils_rpt_param_editor_report_name'> </b>
 	</div>
 
+	<table id='oils_rpt_recur_editor_table'>
+		<tbody>
+			<tr>
+				<th>Recuring Report</th>
+				<td><input type="checkbox" name="oils_rpt_recur" value="t"/></td>
+			</tr>
+			<tr>
+				<th>Recurance Interval</th>
+				<td>
+					<select name="oils_rpt_recur_count">
+						<option>1</option>
+						<option>2</option>
+						<option>3</option>
+						<option>4</option>
+						<option>5</option>
+						<option>6</option>
+						<option>7</option>
+						<option>8</option>
+						<option>9</option>
+						<option>10</option>
+						<option>11</option>
+						<option>12</option>
+						<option>13</option>
+						<option>14</option>
+						<option>15</option>
+						<option>16</option>
+						<option>17</option>
+						<option>18</option>
+						<option>19</option>
+						<option>20</option>
+						<option>21</option>
+						<option>22</option>
+						<option>23</option>
+						<option>24</option>
+					</select>
+					<select name="oils_rpt_recur_interval_type">
+						<option value="hours">Hour(s)</option>
+						<option value="days">Day(s)</option>
+						<option value="weeks">Week(s)</option>
+						<option value="months">Month(s)</option>
+					</select>
+				</td>
+			</tr>
+		</tbody>
+	</table>
+
 	<table id='oils_rpt_param_editor_table'>
 		<thead>
 			<tr>
