minor updates to html

--- a/Open-ILS/web/reports/oils_rpt_editor.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_editor.xhtml
@@ -24,7 +24,7 @@
 			</tr>
 			<tr><td colspan='2'><hr/></td></tr>
 			<tr>
-				<td>Choose a folder to store this report definition: </td>
+				<th>Choose a folder to store this report definition: </th>
 				<td>
 					<div style='margin-bottom: 7px;'>
 						<span>Selected Folder: </span>
@@ -82,7 +82,7 @@
 								<td><input name="sched_email" type="text" size="25"/></td>
 							</tr>
 							<tr>
-								<td>Choose a folder to store this report's output: </td>
+								<th>Choose a folder to store this report's output: </th>
 								<td>
 									<div style='margin-bottom: 7px;'>
 										<span>Selected Folder: </span>
